adithi-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: veg-pod

spec:
  containers:
    - name: veg-container
      image: adithi741/veg:v1.0.0
      imagePullPolicy: Never
