deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: organic-ghee-deployment
  namespace: adithi-ns
  labels:
    first: app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: organic-ghee
  template:
    metadata:
      labels:
        app: organic-ghee
    spec:
      containers:
        - name: organic-ghee-container
          image: adithi741/organic-ghee-app:v1.0.0
          ports:
            - containerPort: 5656

---

apiVersion: v1
kind: Service
metadata:
  name: clusterip-service
  namespace: adithi-ns
spec:
  selector:
    app: organic-ghee
  ports:
    - protocol: TCP
      port: 5656
      targetPort: 5656
  type: ClusterIP

---

apiVersion: v1
kind: Service
metadata:
  name: nodeport-service
spec:
  selector:
    app: organic-ghee
  ports:
    - protocol: TCP
      port: 5656
      targetPort: 5656
      nodePort: 30007
  type: NodePort
